fixed contact overlapping paragraph
weird bug.

--- a/protected/styles/p.css
+++ b/protected/styles/p.css
@@ -18,7 +18,7 @@ body{width:100%;height:100%;font-size:1em;padding: 15px 15px;box-sizing: border-
 /*home page stuff*/
     body#home>div#content>p{display: block;width: 100%;padding: 5px 5px 5px 270px;box-sizing: border-box;}
       body#home>div#content>p>img{display:block;clear:both;max-width: 100%;padding: 5px 5px 5px 0;box-sizing: border-box;}
-    body#home>div#content>dl#contact{margin:5px;font-size:30px;height:5.5em;width:45%;box-sizing: border-box;position: absolute;}
+    body#home>div#content>dl#contact{margin:5px 0 0 5px;font-size:30px;height:5.5em;width:45%;box-sizing: border-box;position: absolute;}
       body#home>div#content>dl#contact *{transition-property:color, background;transition-duration:.25s,.25s;transition-timing-function:ease-in-out,ease-in-out;}
       body#home>div#content>dl#contact>dt{display: none;}
         body#home>div#content>dl#contact>dd{display:block;float:left;clear:both;line-height:50px;height:50px;background:#eee;margin:0 0 5px 0;font-size:30px;border-radius:25px;width:9em;box-sizing:border-box;padding: 0 0 10px 0;transform:rotate(-1deg);}
